Added parameter to hello function

--- a/test.html
+++ b/test.html
@@ -2,5 +2,5 @@
 <script src="src/index.js"></script>
 <div id="target"></div>
 <script>
-target.textContent = hello();
+	target.textContent = hello("User");
 </script>
