--- a/examples/offsetAnchorPosition.html
+++ b/examples/offsetAnchorPosition.html
@@ -13,6 +13,12 @@
   }
 
   #container {
+
+    position: absolute;
+    left: 300px;
+    top: 300px;
+    background-color: yellow;
+
     width: 1000px;
     height: 1000px;
     transform: scale(1);
