--- a/examples/rotate.html
+++ b/examples/rotate.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <script src="../third_party/web-animations-js/web-animations.dev.js"></script>
-<script src="../index.min.js"></script>
+<script src="../motion-path-polyfill.min.js"></script>
 
 <div id="container">
   <div id="target">
