updated demo to match camel case

--- a/examples/offsetAnchorPosition.html
+++ b/examples/offsetAnchorPosition.html
@@ -35,7 +35,7 @@
 </style>
 
 <script>
-  var keyframes = [{'offset-position': '50% 50%', 'offset-anchor': 'auto'}, {'offset-position': '0% 100%', 'offset-anchor': 'auto'}];
+  var keyframes = [{offsetPosition: '50% 50%', offsetAnchor: 'auto'}, {offsetPosition: '0% 100%', offsetAnchor: 'auto'}];
   var timing = {duration: 2000, iterations: 3};
   target.animate(keyframes, timing);
 </script>
