--- a/examples/checkerboards.html
+++ b/examples/checkerboards.html
@@ -2,14 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <!--
-    Illustrates how offset-rotate could be used to rotate around the offset-anchor,
-    if offset-position and offset-anchor were specified as identical percentage pairs,
-    and offset-path was 'path("m 0 0")'.
 
-    If Option A or B are taken in https://github.com/w3c/fxtf-drafts/issues/64
-    then offset-path can be none and then offset-anchor can be auto.
-  -->
   <script src="../third_party/web-animations-js/web-animations.dev.js"></script>
   <script src="../motion-path-polyfill.min.js"></script>
   <style>
@@ -21,11 +14,11 @@
   }
 
   body {
-    background-color: blue;
+    background-color: black;
   }
 
   .board {
-    background-color: red;
+    background-color: blue;
     position: absolute;
     left: 300px;
     width: 600px;
@@ -34,38 +27,15 @@
   }
 
   .white {
-    background-color: yellow;
+    background-color: lime;
   }
 
   .black {
-    background-color: green;
+    background-color: fuchsia;
   }
 
   .square {
     position: absolute;
-    /*animation: anim 3s infinite;*/
-  }
-
-  /*
-  Each square's rotation origin depends on its position, e.g.
-
-  .topLeft {
-    offset-position: 0% 0%; offset-anchor: 0% 0%;
-  }
-  .topRight {
-    offset-position: 100% 0%; offset-anchor: 100% 0%;
-  }
-  .bottomRight {
-    offset-position: 100% 100%; offset-anchor: 100% 100%;
-  }
-  .bottomLeft {
-    offset-position: 0% 100%; offset-anchor: 0% 100%;
-  }
-  */
-
-  @keyframes anim {
-    0% { rotate: 0deg; }
-    100% { rotate: 360deg; }
   }
 
   </style>
@@ -87,16 +57,16 @@
           square.style.width = (600 / side) + 'px';
           square.style.height = (600 / side) + 'px';
 
-          // offset-position and offset-anchor would replace left/top/transformOrigin
-          square.style.left = ((side - right - 1) * 600 / side) + 'px';
-          square.style.top = ((side - bottom - 1) * 600 / side) + 'px';
-
+          var position = '50% 50%';
           if (side > 1) {
-            square.style.transformOrigin = ((side - right - 1) * 600 / (side - 1) / side) + 'px ' + ((side - bottom - 1) * 600 / (side - 1) / side) + 'px';
+            position = ((side - right - 1) * 100 / (side - 1)) + '% ' + ((side - bottom - 1) * 100 / (side - 1)) + '%';
           }
 
           board.appendChild(square);
-          square.animate([{rotate: '0deg'}, {rotate: '360deg'}], {duration: 3000, iterations: Infinity});
+          square.animate([
+            {offsetRotate: '0deg', offsetAnchor: position, offsetPath: 'path("m 0 0")', offsetPosition: position}, 
+            {offsetRotate: '360deg', offsetAnchor: position, offsetPath: 'path("m 0 0")', offsetPosition: position}
+          ], {duration: 3000, iterations: Infinity});
         }
       }
 
