changes according to review comments.

--- a/examples/offsetAnchorPosition.html
+++ b/examples/offsetAnchorPosition.html
@@ -24,7 +24,7 @@
     position: absolute;
     left: 300px;
     top: 300px;
-    background-color: blue;
+    background-color: white;
 
     width: 500px;
     height: 500px;
@@ -34,14 +34,14 @@
   #targetA {
     width: 100px;
     height: 100px;
-    background-color: yellow;
+    background-color: lime;
     position: absolute;
     left: 300px;
     top: 300px;
   }
 
   #targetB {
-    width: 100px;
+    width: 160px;
     height: 100px;
     background-color: yellow;
     position: absolute;
@@ -50,9 +50,9 @@
   }
 
   #targetC {
-    width: 100px;
-    height: 100px;
-    background-color: yellow;
+    width: 160px;
+    height: 160px;
+    background-color: blue;
     position: absolute;
     left: 300px;
     top: 300px;
@@ -60,8 +60,8 @@
 
   #targetD {
     width: 100px;
-    height: 100px;
-    background-color: yellow;
+    height: 160px;
+    background-color: red;
     position: absolute;
     left: 300px;
     top: 300px;
