--- a/examples/offsetRayDistance.html
+++ b/examples/offsetRayDistance.html
@@ -23,7 +23,7 @@
 </style>
 
 <script>
-  var keyframes = [{offsetPath: "path('m 0, 0 h 100 v 100 h -100 z')", offsetDistance: '0px'}, {offsetPath: "path('m 0, 0 h 100 v 100 h -100 z')", offsetDistance: '200px'}];
-  var timing = {duration: 2000, iterations: 3};
+  var keyframes = [{'offset-path': "path('m 0, 0 h 100 v 100 h -100')", 'offset-distance': '0px'}, {'offset-path': "path('m 0, 0 h 100 v 100 h -100')", 'offset-distance': '300px'}];
+  var timing = {duration: 3000, iterations: 3};
   target.animate(keyframes, timing);
 </script>
