--- a/examples/offsetRayDistance.html
+++ b/examples/offsetRayDistance.html
@@ -19,11 +19,12 @@
     left: 500px;
     top: 500px;
     background-color: grey;
+    stroke : black;
   }
 </style>
 
 <script>
-  var keyframes = [{'offset-path': "path('m 0, 0 h 100 v 100 h -100')", 'offset-distance': '0px'}, {'offset-path': "path('m 0, 0 h 100 v 100 h -100')", 'offset-distance': '300px'}];
-  var timing = {duration: 3000, iterations: 3};
+  var keyframes = [{'offset-path': "path('M 0, 0 L 50, 50 L -50, 50 L 0, 0')", 'offset-distance': '0%'}, {'offset-path': "path('M 0, 0 L 50, 50 L -50, 50 L 0, 0')", 'offset-distance': '100%'}];
+  var timing = {duration: 6000, iterations: 3};
   target.animate(keyframes, timing);
 </script>
