--- a/examples/scale.html
+++ b/examples/scale.html
@@ -25,7 +25,7 @@
 </style>
 
 <script>
-  var keyframes = [{scale: 1}, {scale: 2}];
+  var keyframes = [{scale: 1}, {scale: 2}, {scale: '1 2'}, {scale: 1}];
   var timing = {duration: 2000, iterations: 3};
   target.animate(keyframes, timing);
 </script>
