--- a/examples/offsetRayDistance.html
+++ b/examples/offsetRayDistance.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <script src="../third_party/web-animations-js/web-animations.dev.js"></script>
-<script src="../index.min.js"></script>
+<script src="../motion-path-polyfill.min.js"></script>
 
 <div id="container">
   <div id="target">
@@ -24,7 +24,7 @@
 </style>
 
 <script>
-  var keyframes = [{offsetPath: "path('m 0, 0 h 100 v 100 h -100')", offsetDistance: '0%'}, {offsetPath: "path('m 0, 0 h 100 v 100 h -100')", offsetDistance: '100%'}];
-  var timing = {duration: 6000, iterations: 3};
+  var keyframes = [{offsetPath: "ray(60deg)", offsetDistance: '0%'}, {offsetPath: "ray(60deg)", offsetDistance: '100%'}];
+  var timing = {duration: 6000, iterations: 1};
   target.animate(keyframes, timing);
 </script>
